# Krishi-Veda-Module

./: .gitignore  .replit  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  HF_DEPLOYMENT_GUIDE.md  PITCH_DOC.md  README.md  agri_dataset_bridge.py  krishi_veda_offline.db  main.py  replit.md  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.hf/: app.yml
Krishi-Veda-AI/cpp_kernels/: vedic_kernels.cpp
Krishi-Veda-AI/data/: rainfall_stats.csv
Krishi-Veda-Module/vedic_engine/: anurupyena.cpp  krishi_veda_logic.py  paravartya.cpp  vedic_bridge.py
ai_models/quantized/: soil_model.tflite
backend/: main.py
backend/core/: lazy_loader.py  slm_engine.py  sync_manager.py  uart_listener.py  vedic_kernels_bridge.py
backend/db/: sqlite_engine.py
backend/services/: agri_bridge.py  external_intel_service.py  slm_reasoning_engine.py  soil_health.py
cpp_kernels/: vedic_ext.cpp  vedic_kernels.cpp  vedic_v2.cpp
data/: soil_health_card.csv
datasets/: fao_crop_statistics.csv
docs/: deployment_guide.md  grant_documentation.md
frontend/: app.py  idb.js  index.html  manifest.json  sw.js  vedic_wasm.js  webllm_adapter.js
localization/dicts/: as.json  bn.json  hi.json  ta.json
scripts/: convert_models.py
vedic_core/: Makefile  vedic_kernels_wasm.cpp
vedic_engine/: interpreter.py
vedic_engine/kernels/: CMakeLists.txt  nikhilam_sutra.cpp  urdhva_sutra.cpp  vedic_kernels.cpp
vedic_engine/kernels/build_x86_64/: CMakeCache.txt  Makefile  cmake_install.cmake
